Multiverse 5.0 (#52)
* Using new multiverse api